--- a/basic-front-end/quote-generator/css/style.css
+++ b/basic-front-end/quote-generator/css/style.css
@@ -1,12 +1,19 @@
 body {
   font-size:16px;
+  font-family: 'Rock Salt', cursive;
 }
+p { font-family: verdana, sans-serif}
 
 #quote-pad {
   margin-top:20px;
   background-color: #041B84;
   color: #ffffff;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px 25px;
+  
   border-radius: 15px;
+}
+.btn-default:hover{
+  background-color: #041B84;
+  color: #ffffff;
+  
 }
