--- a/basic-front-end/calculator/css/style.css
+++ b/basic-front-end/calculator/css/style.css
@@ -5,8 +5,10 @@
 }
 
 #calc-screen {
+  font-weight:700;
+  overflow:hidden;
   width: 250px;
-  height: 45px;
+  height: 40px;
   background-color: #C7C7B0;
   margin-left: auto;
   margin-right: auto;
@@ -14,6 +16,9 @@
   text-align: right;
   padding-right: 10px;
   color: #000000;
+  border-radius: 15px;
+  margin-bottom:10px;
+  margin-top:10px;
 }
 
 #calculator {
@@ -27,3 +32,10 @@
   background-color: #37384C;
   color: #ffffff;
 }
+
+.btn {
+  font-size:16px;
+  font-weight:700;
+  border-radius: 8px;
+}
+
