--- a/basic-front-end/portfolio/css/style.css
+++ b/basic-front-end/portfolio/css/style.css
@@ -1,35 +1,42 @@
-html, body {
+html,
+body {
   height: 100%;
-  font-size:16px;
+  font-size: 16px;
 }
 /* footer */
+
 .footer {
   position: relative;
-  clear:both;
-  padding-top:20px;
-  background-color:#F8F8F8;    
-} 
+  clear: both;
+  padding-top: 20px;
+  background-color: #F8F8F8;
+}
+
 .footer-left {
   text-aliign: left;
 }
-
 /*jumbotron*/
+
 .jumbotron {
   margin-bottom: 0px;
 }
-.jumbotron hr { max-width: 80%; }
 
+.jumbotron hr {
+  max-width: 80%;
+}
 /* navbar */
+
 .navbar {
   margin-bottom: 0px;
 }
 
-.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
   background-color: #4F608F;
   color: #FFFFFF;
 }
-
 /* main section div's */
+
 .main-section {
   color: #FFFFFF;
   min-height: 400px;
@@ -37,36 +44,46 @@ html, body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  padding-top:50px;
+  padding-top: 50px;
 }
+
 .main-section p {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-   vertical-align:middle;
+  vertical-align: middle;
 }
 /*about section*/
+
 .about img {
-    padding: 10px;
+  padding: 10px;
 }
 
-.home, .portfolio {
+.home,
+.portfolio {
   background-color: #4F608F;
 }
-.about, .contact {
+
+.about,
+.contact {
   background-color: #162756;
 }
 
-.contact-section li {padding: 10px;}
-.contact-section li button {width: 115px;}
+.contact-section li {
+  padding: 10px;
+}
 
+.contact-section li button {
+  width: 115px;
+}
 /*button styling*/
 
-.btn-default:hover{
+.btn-default:hover {
   background-color: #000000;
   color: #ffffff;
 }
-
 /*portfolio */
-.caption h3 {margin-top:5px;}
 
+.caption h3 {
+  margin-top: 5px;
+}
