--- a/intermediate-front-end/TicTacToe/css/style.css
+++ b/intermediate-front-end/TicTacToe/css/style.css
@@ -7,7 +7,8 @@
 
 }
 #gameboard {display:none;}
-
+.pickerButtons p {font-size:30px;}
+.pickerButton {background-color: blue; color: #ffffff; padding:15px; font-size:25px;}
 .square h3 {
   color: #ffffff;
   text-align: center;
