--- a/intermediate-front-end/simon/css/style.css
+++ b/intermediate-front-end/simon/css/style.css
@@ -1,15 +1,22 @@
 body {
   font-weight: 900;
 }
+
 .container {
   padding-top: 50px;
-}
-.top-left, .top-right, .bottom-left, .bottom-right {
+  width:600px;
+ }
+
+.top-left,
+.top-right,
+.bottom-left,
+.bottom-right {
   border: 5px solid #000;
   margin: 0;
   height: 250px;
   width: 250px;
 }
+
 .top-left {
   background-color: #308940;
   /* active color: #297036 */
@@ -17,9 +24,12 @@ body {
   border-radius: 250px 0 0 0;
   display: inline-block;
 }
+
 .active0 {
   background-color: #297036;
 }
+
+
 .top-right {
   display: inline-block;
   background-color: #EB2A2A;
@@ -27,9 +37,8 @@ body {
   -moz-border-radius: 0 250px 0 0;
   border-radius: 0 250px 0 0;
 }
-.active1 {
-  background-color: #8E1A1A;
-}
+.active1 { background-color: #8E1A1A;}
+
 .bottom-left {
   background-color: #FFFF00;
   /* active color: #A9A907*/
@@ -37,9 +46,8 @@ body {
   border-radius: 0 0 0 250px;
   display: inline-block;
 }
-.active2 {
-  background-color: #A9A907;
-}
+.active2 {background-color: #A9A907; }
+
 .bottom-right {
   background-color: #1F07A9;
   /* active color: #0C043F*/
@@ -47,9 +55,8 @@ body {
   border-radius: 0 0 250px 0;
   display: inline-block;
 }
-.active3 {
-  background-color: #0C043F;
-}
+.active3 {background-color: #0C043F;}
+
 .control {
   border: solid 5px #000;
   background-color: #fff;
@@ -60,29 +67,25 @@ body {
   margin-top: 125px;
   margin-left: 115px;
 }
+
 .control h1 {
   font-weight: 900;
 }
+
 .control .row {
   padding-left: 30px;
 }
+
 #count-screen {
-  font-size: 20px;
+  font-size:20px;
   text-align: center;
   height: 30px;
   width: 40px;
-  background-color: #F268C7;
+  background-color: #C7C7B0;
   border-radius: 5px;
   border: 1px solid #000;
 }
-#count, #start, #strict {
-  display: inline-block;
-  padding-right: 35px;
-}
-#start .btn, #strict .btn {
-  margin-left: 5px;
-  border-radius: 30px;
-  height: 30px;
-  width: 30px;
-  border-color: #000;
-}
+
+.strictOn, .strictOn:hover, .strictOn:focus {background-color: #308940;}
+#count, #start, #strict {display:inline-block; padding-right:35px;}
+#start .btn, #strict .btn {margin-left:5px;border-radius:30px; height: 30px; width: 30px; border-color: #000;}
